--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Mvvm Example</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="firebase_auth_client_id">588339627663-kqg4dsqs1jvubmglkh94q5c1uv23bc5u.apps.googleusercontent.com</string>
 </resources>
